--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,43 +12,7 @@ const year = new Date().getFullYear()
 ---
 
 <footer>
-  <p>
-    <span>
-      © <span id="year">{year}</span>
-      {designedWith}
-      <video
-        width="24"
-        src="/media/unicorn.webm"
-        preload="metadata"
-        playsinline
-        autoplay
-        muted
-        loop></video>
-      {designedBy}
-      <a
-        href="https://www.linkedin.com/in/ux-ana-rangel"
-        target="_blank"
-        rel="noopener noreferrer">UX Ana Rangel</a
-      >
-    </span>
-    <span>
-      {developedWith}
-      <video
-        width="24"
-        src="/media/heart.webm"
-        preload="metadata"
-        playsinline
-        autoplay
-        muted
-        loop></video>
-      {developedBy}
-      <a
-        href="https://felixicaza.com/"
-        target="_blank"
-        rel="noopener noreferrer">Felix Icaza</a
-      >.
-    </span>
-  </p>
+  © <span id="year">{year}</span> Copyright
 </footer>
 
 <style>
