--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components'
-import { switchLocalePath, t } from 'i18n:astro'
+import { t } from 'i18n:astro'
 import ToggleSwitch from '@components/ToggleSwitch.astro'
 
 // Obtenemos los enlaces de la navegación de locales
@@ -18,7 +18,7 @@ const links = t('navbar', { returnObjects: true })
         </li>
       ))
     }
-    
+
     <li>
       <ToggleSwitch />
     </li>
@@ -31,7 +31,7 @@ const links = t('navbar', { returnObjects: true })
 <dialog>
   <nav>
     {links.map(({ label, href }) => <a href={href}>{label}</a>)}
-  
+
     <div>
       <ToggleSwitch />
     </div>
