--- a/src/routes/index.astro
+++ b/src/routes/index.astro
@@ -3,7 +3,7 @@ import { t } from 'i18n:astro'
 import { URL } from '@data/constants'
 import Layout from '@layouts/Layout.astro'
 import About from '@pages/_home/About.astro'
-import Contact from '@pages/_home/Contact.astro'
+// import Contact from '@pages/_home/Contact.astro'
 import Experience from '@pages/_home/Experience.astro'
 import Hero from '@pages/_home/Hero.astro'
 import Projects from '@pages/_home/Projects.astro'
@@ -23,7 +23,7 @@ const options = {
     <Experience />
     <Projects />
     <About />
-    <Contact />
+    <!-- <Contact /> -->
   </main>
 </Layout>
 
