--- a/src/routes/index.astro
+++ b/src/routes/index.astro
@@ -7,6 +7,7 @@ import About from '@pages/_home/About.astro'
 import Experience from '@pages/_home/Experience.astro'
 import Hero from '@pages/_home/Hero.astro'
 import Projects from '@pages/_home/Projects.astro'
+import Tools from '@pages/_home/Tools.astro'
 import OpenGraph from '@components/OpenGraph.astro'
 
 const options = {
@@ -22,6 +23,7 @@ const options = {
     <Hero />
     <Experience />
     <Projects />
+    <Tools />
     <About />
     <!-- <Contact /> -->
   </main>
