--- a/src/pages/_home/Tools.astro
+++ b/src/pages/_home/Tools.astro
@@ -27,7 +27,9 @@ const { title, tools } = t('tools', {
                   name={`techs/${name.toLowerCase().replaceAll(' ', '-')}`}
                   size={24}
                 />
-                <span>{name}</span>
+                <a href={url} target="_blank" rel="noopener noreferrer">
+                  {name}
+                </a>
               </span>
             ))}
           </div>
@@ -39,6 +41,31 @@ const { title, tools } = t('tools', {
 
 <style>
   .tools {
+    h2 {
+      display: flex;
+      gap: 24px;
+      justify-content: center;
+      align-items: center;
+      white-space: nowrap;
+      margin-bottom: 43px;
+
+      @media (width >= 768px) {
+        justify-content: start;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 1px;
+          background-color: var(--border-color);
+        }
+      }
+
+      & span {
+        order: 1;
+      }
+    }
+
     padding-bottom: 120px;
 
     .tool-container {
@@ -57,10 +84,6 @@ const { title, tools } = t('tools', {
       display: block;
     }
 
-    a {
-      text-decoration: none;
-    }
-
     div {
       display: flex;
       flex-wrap: wrap;
@@ -70,18 +93,24 @@ const { title, tools } = t('tools', {
         padding: 10px 20px;
         border-radius: 8px;
         font-weight: 500;
-        text-transform: uppercase;
         transition: background-color 0.3s;
 
         &:hover {
           background-color: var(--color-primary-dark);
         }
       }
+
+      a {
+        color: white;
+        text-decoration: none;
+        margin-left: 8px;
+      }
     }
 
     .tools-list {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+      /* flex-wrap: wrap; */
       gap: 8px;
       font-size: 1rem;
       span {
