--- a/src/components/CardProject.astro
+++ b/src/components/CardProject.astro
@@ -46,7 +46,7 @@ if (!images[src])
           const techLower = tech.toLowerCase().replaceAll(' ', '-')
 
           return (
-            <span class={`badge-tech ${techLower}`}>
+            <span class={`badge-tech`}>
               <Icon name={`techs/${techLower}`} size={24} />
               <span>{tech}</span>
             </span>
