--- a/src/components/CardProject.astro
+++ b/src/components/CardProject.astro
@@ -28,7 +28,7 @@ if (!images[src])
 
 <section class="card-project">
   <div>
-    <a href="#">
+    <a href={link || null} target="_blank" rel="noopener noreferrer">
       <Picture
         src={images[src]()}
         alt={alt}
