--- a/src/components/CardProject.astro
+++ b/src/components/CardProject.astro
@@ -40,7 +40,11 @@ if (!images[src])
     </a>
   </div>
   <div class="description">
-    <h3><a href="#">{title}</a></h3>
+    <h3>
+      <a href={link || null} target="_blank" rel="noopener noreferrer"
+        >{title}</a
+      >
+    </h3>
     <div class="badges">
       {
         techs.map((tech) => {
