--- a/src/pages/_home/Tools.astro
+++ b/src/pages/_home/Tools.astro
@@ -62,7 +62,7 @@ const { title, tools } = t('tools', {
       }
 
       & span {
-        order: 1;
+        order: 0;
       }
     }
 
@@ -112,13 +112,21 @@ const { title, tools } = t('tools', {
 
     .tools-list {
       display: grid;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: repeat(2, minmax(0, 1fr));
       /* flex-wrap: wrap; */
       gap: 8px;
       font-size: 1rem;
       span {
         /* color: white; */
         color: var(--text-color);
+      }
+
+      @media (width >= 768px) {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+
+      @media (width >= 1024px) {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
       }
     }
   }
