--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -7,18 +7,33 @@ import { Icon } from 'astro-icon/components'
     <a href="#" aria-label="Mail">
       <Icon name="top" size={28} />
     </a>
+
     <a
       href="https://github.com/czer0C"
       aria-label="GitHub"
       target="_blank"
       rel="noopener noreferrer"
+      target="_blank"
+      rel="noopener noreferrer"
     >
       <Icon name="github" size={28} />
     </a>
-    <a href={null} aria-label="LinkedIn">
+
+    <a
+      href="https://www.linkedin.com/in/czer0c/"
+      aria-label="LinkedIn"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
       <Icon name="linkedin" size={28} />
     </a>
-    <a href={null} aria-label="Mail">
+
+    <a
+      href={`mailto:trieunguyen04239@gmail.com?subject=Hello%20Nguyen%20Trieu&body=Hello%20Nguyen%20Trieu%2C%0A%0A`}
+      aria-label="Mail"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
       <Icon name="mail" size={28} />
     </a>
   </nav>
