--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -130,7 +130,7 @@ const { title, description, metaRobots } = options
     {description && <meta name="description" content={description} />}
     {description && <link href={Astro.url.href} rel="canonical" />}
     <I18NHead />
-    <meta name="author" content="Felix Icaza - https://felixicaza.com" />
+    <meta name="author" content="Czer0C - https://czer0C.dev" />
     <meta name="generator" content={Astro.generator} />
 
     {
@@ -139,16 +139,15 @@ const { title, description, metaRobots } = options
           item={{
             '@context': 'https://schema.org',
             '@type': 'Person',
-            name: 'Felix Icaza',
-            url: 'https://felixicaza.com',
-            image: 'https://felixicaza.com/img/profile.jpg',
+            name: 'Czer0C',
+            url: 'https://www.czer0c.dev',
+            image: '',
             sameAs: [
-              'https://felixicaza.com',
-              'https://www.upwork.com/freelancers/felixicaza',
-              'https://www.linkedin.com/in/felixicaza',
-              'https://github.com/felixicaza'
+              'https://czer0c.dev',
+              'https://www.linkedin.com/in/czer0c/',
+              'https://github.com/czer0c'
             ],
-            jobTitle: 'Desarrollador Web Frontend'
+            jobTitle: 'Fullstack Developer'
           }}
         />
       )
