--- a/src/pages/_home/Hero.astro
+++ b/src/pages/_home/Hero.astro
@@ -28,7 +28,7 @@ const {
     </section>
     <section class="button-container">
       <Button class="filled" href="#">{cta}</Button>
-      <Button href="#">
+      <Button href="https://www.linkedin.com/in/czer0c/" target="_blank">
         <Icon name="linkedin" size={24} />
         <span>LinkedIn</span>
       </Button>
