--- a/src/pages/_home/About.astro
+++ b/src/pages/_home/About.astro
@@ -1,5 +1,5 @@
 ---
-import felixicaza from '@images/profile.jpg'
+import profile from '@images/profile.jpg'
 import { Picture } from 'astro:assets'
 import { t } from 'i18n:astro'
 
@@ -23,8 +23,8 @@ const normalizeTitle = title
   <section class="info">
     <div class="picture">
       <Picture
-        src={felixicaza}
-        alt="Felix Icaza"
+        src={profile}
+        alt="profile-pic"
         width={366}
         height={361}
         formats={['avif', 'webp']}
